# api-osondokon-old

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
assets/static/assets/: index-CEdh7iIZ.js  index-C_wuuYLX.css  vendor-c89Lsf8L.js
assets/static/locales/en/: translation.json
assets/static/locales/ru/: translation.json
assets/static/locales/uz/: translation.json
assets/templates/: index.html
deployments/compose/backend/: Dockerfile  entrypoint  start
src/: manage.py
src/apps/account/: admin.py  apps.py  models.py  sms_providers.py  tasks.py  utils.py
src/apps/account/migrations/: 0001_initial.py  0002_alter_otp_options_remove_user_is_email_verified_and_more.py  0003_alter_user_options_remove_user_unique_email_and_more.py  0004_alter_user_user_type.py
src/apps/api/: helper.py  jwt_utils.py  urls.py
src/apps/business/: admin.py  apps.py  handlers.py  models.py  service.py  tasks.py  utils.py
src/apps/business/migrations/: 0001_initial.py  0002_business_favicon_alter_subscription_platform_type.py  0003_trafficstat.py  0004_business_tg_hash_id.py
src/apps/category/: admin.py  models.py
src/apps/category/migrations/: 0001_initial.py  0002_category_parent_and_more.py  0003_remove_category_categories_busines_11ea6f_idx_and_more.py
src/apps/common/: admin.py  middleware.py
src/apps/delivery/: admin.py  apps.py  models.py  signals.py
src/apps/delivery/migrations/: 0001_initial.py  0002_remove_deliverymethod_estimated_shipping_time_and_more.py  0003_deliverymethod_estimated_shipping_time.py
src/apps/marketing/: admin.py  models.py
src/apps/marketing/migrations/: 0001_initial.py  0002_banner_desktop_image.py
src/apps/order/: admin.py  apps.py  models.py  signals.py  utils.py
src/apps/order/migrations/: 0001_initial.py  0002_order_is_paid_order_source.py  0003_orderitem_variant_alter_orderitem_product.py
src/apps/payments/: utils.py
src/apps/payments/views/: click.py  payme.py
src/apps/product/: admin.py  models.py
src/apps/product/migrations/: 0001_initial.py  0002_rename_description_product_description_uz_and_more.py  0003_alter_product_attributes_and_more.py  0004_product_description_tr_product_name_tr_and_more.py
src/apps/telegrambot/: admin.py  apps.py  models.py  signals.py  views.py
src/core/: settings.py  urls.py  utils.py
src/core/config/: __init__.py  admin.py  apps.py  cache.py  graphql.py  logs.py  payments.py  s3.py  sentry.py
(+42 files in other folders)
