[project]
name = "osondokon-backend"
version = "1.0.0"
description = "OsonDokon backend API (GraphQL + Django)"
requires-python = ">=3.11"

dependencies = [
    # Django
    "Django==5.2.7",
    # Admin
    "django-unfold==0.67.0",
    # GraphQL
    "graphene==3.4.3",
    "graphene-django==3.2.3",
    "graphene-file-upload==1.3.0",
    "django-graphql-jwt==0.4.0",
    "graphql-core==3.2.6",
    # REST (used by payments webhooks)
    "djangorestframework==3.16.0",
    "drf-spectacular==0.27.1",
    "drf-spectacular-sidecar==2024.3.4",
    # Auth / Security
    "PyJWT~=2.8.0",
    "bcrypt==4.3.0",
    # Database
    "psycopg2-binary==2.9.10",
    # Cache / Sessions
    "django-redis==5.4.0",
    "redis==5.2.1",
    # Celery
    "celery==5.4.0",
    "django-celery-beat>=2.7.0",
    "flower==2.0.1",
    # Storage
    "django-storages==1.14.6",
    "boto3==1.37.33",
    "pillow==10.2.0",
    # Payments
    "payme-pkg==3.3.2",
    "click-pkg==0.8",
    # i18n / Translation
    "django-modeltranslation==0.18.11",
    # CORS
    "django-cors-headers==4.7.0",
    # Filters
    "django-filter==25.1",
    # Monitoring
    "sentry-sdk[django]>=2.25.1",
    "django-prometheus>=2.4.1",
    "prometheus-client>=0.22.0",
    # Utils
    "python-dotenv==1.0.1",
    "python-magic==0.4.27",
    "requests==2.32.3",
    "colorlog==6.9.0",
    # WSGI/ASGI
    "gunicorn==23.0.0",
    "uvicorn[standard]==0.37.0",
    # Rosetta (i18n UI)
    "django-rosetta==0.10.0",
]

[dependency-groups]
dev = [
    "deptry",
    "black",
]
test = [
    "pytest",
    "pytest-django",
    "pytest-cov",
    "pytest-mock",
]
lint = [
    "ruff",
]
typecheck = [
    "mypy",
    "types-PyYAML",
    "types-requests",
    "django-stubs",
]
docker = [
    "uvloop==0.21.0",
    "httptools==0.6.4",
]

[tool.uv]
default-groups = ["dev", "test", "lint", "typecheck"]
package = false

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = ["*/migrations"]

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "I",
    "S",
    "UP",
    "W",
]
ignore = [
    "B008",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "core.settings"
pythonpath = ["src"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]
